# security-governance-gatekeeper

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_audit_logs.py
config/: presidio.yaml  roles.yaml
src/security_governance_gatekeeper/adapters/persistence/: postgres_audit_adapter.py
src/security_governance_gatekeeper/adapters/pii/: presidio_adapter.py
src/security_governance_gatekeeper/adapters/rate_limiting/: redis_adapter.py
src/security_governance_gatekeeper/api/: main.py
src/security_governance_gatekeeper/api/middleware/: auth.py  security_gatekeeper.py
src/security_governance_gatekeeper/api/routers/: audit.py  demo.py
src/security_governance_gatekeeper/domain/: exceptions.py  models.py  policies.py
src/security_governance_gatekeeper/interfaces/: pii_redactor.py  rate_limiter.py
src/security_governance_gatekeeper/interfaces/audit/: audit.py
